--- a/cloud/index.html
+++ b/cloud/index.html
@@ -20,9 +20,9 @@
         }
 
         [data-theme="dark"] {
-            --bg-primary: #0a0e1a;
-            --bg-secondary: #111827;
-            --bg-card: rgba(17, 24, 39, 0.7);
+            --bg-primary: #050816;
+            --bg-secondary: #0c1225;
+            --bg-card: rgba(12, 18, 37, 0.75);
             --bg-input: rgba(255, 255, 255, 0.06);
             --bg-input-hover: rgba(255, 255, 255, 0.1);
             --border-color: rgba(255, 255, 255, 0.08);
@@ -31,36 +31,40 @@
             --text-secondary: #94a3b8;
             --text-muted: #64748b;
             --text-input: #ffffff;
-            --shadow-card: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
-            --shadow-btn: 0 4px 20px rgba(99, 102, 241, 0.4);
-            --orb-1: rgba(99, 102, 241, 0.15);
-            --orb-2: rgba(139, 92, 246, 0.12);
-            --orb-3: rgba(59, 130, 246, 0.1);
-            --particle-color: rgba(99, 102, 241, 0.3);
-            --grid-opacity: 0.3;
-            --toggle-bg: rgba(255, 255, 255, 0.1);
+            --shadow-card: 0 25px 60px -12px rgba(0, 0, 0, 0.6), 0 0 80px -20px rgba(99, 102, 241, 0.1);
+            --shadow-btn: 0 4px 25px rgba(99, 102, 241, 0.5);
+            --orb-1: rgba(99, 102, 241, 0.25);
+            --orb-2: rgba(168, 85, 247, 0.2);
+            --orb-3: rgba(14, 165, 233, 0.18);
+            --orb-4: rgba(236, 72, 153, 0.12);
+            --orb-5: rgba(34, 211, 238, 0.1);
+            --particle-color: rgba(147, 155, 255, 0.4);
+            --grid-opacity: 0.2;
+            --toggle-bg: rgba(255, 255, 255, 0.08);
             --toggle-icon: "🌙";
         }
 
         [data-theme="light"] {
-            --bg-primary: #eef2ff;
+            --bg-primary: #f5f3ff;
             --bg-secondary: #ffffff;
-            --bg-card: rgba(255, 255, 255, 0.75);
-            --bg-input: rgba(99, 102, 241, 0.06);
-            --bg-input-hover: rgba(99, 102, 241, 0.1);
-            --border-color: rgba(99, 102, 241, 0.12);
+            --bg-card: rgba(255, 255, 255, 0.65);
+            --bg-input: rgba(99, 102, 241, 0.05);
+            --bg-input-hover: rgba(99, 102, 241, 0.08);
+            --border-color: rgba(99, 102, 241, 0.1);
             --border-focus: rgba(99, 102, 241, 0.5);
             --text-primary: #0f172a;
             --text-secondary: #475569;
             --text-muted: #94a3b8;
             --text-input: #1e293b;
-            --shadow-card: 0 25px 60px -12px rgba(99, 102, 241, 0.18), 0 0 0 1px rgba(99, 102, 241, 0.06);
-            --shadow-btn: 0 4px 24px rgba(99, 102, 241, 0.35);
-            --orb-1: rgba(15, 23, 42, 0.12);
-            --orb-2: rgba(30, 41, 59, 0.10);
-            --orb-3: rgba(51, 65, 85, 0.08);
-            --particle-color: rgba(15, 23, 42, 0.25);
-            --grid-opacity: 0.15;
+            --shadow-card: 0 30px 70px -15px rgba(99, 102, 241, 0.15), 0 0 0 1px rgba(99, 102, 241, 0.06);
+            --shadow-btn: 0 4px 24px rgba(99, 102, 241, 0.3);
+            --orb-1: rgba(15, 23, 42, 0.09);
+            --orb-2: rgba(99, 102, 241, 0.1);
+            --orb-3: rgba(236, 72, 153, 0.07);
+            --orb-4: rgba(20, 30, 48, 0.06);
+            --orb-5: rgba(139, 92, 246, 0.08);
+            --particle-color: rgba(15, 23, 42, 0.2);
+            --grid-opacity: 0.08;
             --toggle-bg: rgba(99, 102, 241, 0.1);
             --toggle-icon: "☀️";
         }
@@ -80,13 +84,28 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            overflow: hidden;
+            overflow-x: hidden;
             transition: background var(--transition-speed) ease, color var(--transition-speed) ease;
         }
 
-        /* Light mode gradient background boost */
+        /* Dark mode deep space gradient */
+        [data-theme="dark"] body {
+            background:
+                radial-gradient(ellipse at 20% 0%, rgba(99, 102, 241, 0.08) 0%, transparent 50%),
+                radial-gradient(ellipse at 80% 100%, rgba(168, 85, 247, 0.06) 0%, transparent 50%),
+                radial-gradient(ellipse at 50% 50%, rgba(14, 165, 233, 0.04) 0%, transparent 60%),
+                linear-gradient(180deg, #050816 0%, #0a0f24 40%, #0d1330 70%, #050816 100%);
+            background-attachment: fixed;
+        }
+
+        /* Light mode dreamy gradient */
         [data-theme="light"] body {
-            background: linear-gradient(135deg, #eef2ff 0%, #e0e7ff 30%, #fdf2f8 60%, #eff6ff 100%);
+            background:
+                radial-gradient(ellipse at 15% 15%, rgba(199, 210, 254, 0.6) 0%, transparent 50%),
+                radial-gradient(ellipse at 85% 85%, rgba(252, 231, 243, 0.5) 0%, transparent 50%),
+                radial-gradient(ellipse at 50% 50%, rgba(224, 231, 255, 0.4) 0%, transparent 60%),
+                linear-gradient(135deg, #f5f3ff 0%, #eef2ff 25%, #fdf2f8 50%, #eff6ff 75%, #f5f3ff 100%);
+            background-attachment: fixed;
         }
 
         /* ============= Animated Background ============= */
@@ -101,43 +120,62 @@
         .orb {
             position: absolute;
             border-radius: 50%;
-            filter: blur(80px);
+            filter: blur(70px);
             animation: float 20s ease-in-out infinite;
             transition: background var(--transition-speed) ease, filter var(--transition-speed) ease;
         }
 
         [data-theme="light"] .orb {
-            filter: blur(100px);
+            filter: blur(90px);
         }
 
         .orb-1 {
-            width: 500px;
-            height: 500px;
+            width: 600px;
+            height: 600px;
             background: var(--orb-1);
-            top: -10%;
-            left: -10%;
+            top: -15%;
+            left: -15%;
             animation-delay: 0s;
         }
 
         .orb-2 {
-            width: 400px;
-            height: 400px;
+            width: 500px;
+            height: 500px;
             background: var(--orb-2);
-            bottom: -15%;
-            right: -10%;
+            bottom: -20%;
+            right: -15%;
             animation-delay: -7s;
             animation-duration: 25s;
         }
 
         .orb-3 {
-            width: 300px;
-            height: 300px;
+            width: 400px;
+            height: 400px;
             background: var(--orb-3);
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            top: 40%;
+            left: 60%;
             animation-delay: -14s;
             animation-duration: 30s;
+        }
+
+        .orb-4 {
+            width: 350px;
+            height: 350px;
+            background: var(--orb-4);
+            top: 70%;
+            left: 10%;
+            animation-delay: -4s;
+            animation-duration: 22s;
+        }
+
+        .orb-5 {
+            width: 280px;
+            height: 280px;
+            background: var(--orb-5);
+            top: 10%;
+            right: 20%;
+            animation-delay: -10s;
+            animation-duration: 28s;
         }
 
         @keyframes float {
@@ -652,6 +690,8 @@
         <div class="orb orb-1"></div>
         <div class="orb orb-2"></div>
         <div class="orb orb-3"></div>
+        <div class="orb orb-4"></div>
+        <div class="orb orb-5"></div>
     </div>
     <div class="grid-pattern"></div>
 
@@ -730,7 +770,7 @@
 
         <!-- Footer -->
         <p class="footer-text">
-            Powered by <a href="#">HomeControl BaaS</a> · ESP32 Cloud Platform
+            Powered by <a href="https://onlyssl.in">OnlySSL</a>
         </p>
     </div>
 
