--- a/cloud/dashboard.html
+++ b/cloud/dashboard.html
@@ -650,7 +650,19 @@
                 relays.relay4 = { state: false, name: "Fan" };
             }
 
+            const offline = !deviceIsOnline;
+
             let html = '';
+
+            // ── Offline banner ──
+            if (offline) {
+                html += `<div style="grid-column:1/-1;text-align:center;padding:18px 12px;background:rgba(239,68,68,0.12);border:1px solid rgba(239,68,68,0.25);border-radius:14px;margin-bottom:4px;">
+                    <span style="font-size:1.8em;">📵</span>
+                    <div style="font-weight:700;color:#ef4444;margin-top:6px;">Device Offline</div>
+                    <div style="font-size:.85em;color:#94a3b8;margin-top:4px;">Connect your ESP32 to control switches</div>
+                </div>`;
+            }
+
             Object.keys(relays).sort().forEach((key, idx) => {
                 const relay = relays[key];
                 const isOn = relay.state === true;
@@ -659,15 +671,15 @@
                 const icon = switchIcons[idx] || '💡';
 
                 html += `
-                <div class="switch-card ${isOn ? 'active' : ''}" onclick="toggleRelay('${device.id}', '${key}', ${isOn})">
+                <div class="switch-card ${isOn ? 'active' : ''} ${offline ? 'switch-offline' : ''}" 
+                     onclick="toggleRelay('${device.id}', '${key}', ${isOn})" 
+                     title="${offline ? 'Device is offline' : ''}">
                     <button class="switch-edit-btn" onclick="promptRename('${key}', '${name.replace(/'/g, "\\'")}')" title="Rename">✏️</button>
                     <div class="switch-toggle"></div>
-                    <div class="switch-icon-wrapper">
-                        ${icon}
-                    </div>
+                    <div class="switch-icon-wrapper">${icon}</div>
                     <div class="switch-content">
                         <div class="switch-name">${name}</div>
-                        <div class="switch-state">${isOn ? 'ON' : 'OFF'}</div>
+                        <div class="switch-state">${offline ? '⚫ Offline' : (isOn ? 'ON' : 'OFF')}</div>
                     </div>
                 </div>`;
             });
@@ -676,6 +688,12 @@
         }
 
         async function toggleRelay(deviceId, key, currentState) {
+            // Block if device is offline
+            if (!deviceIsOnline) {
+                showToast('⚠️ Device is offline — connect ESP32 first', 'error');
+                return;
+            }
+
             const newState = !currentState;
             if (currentDevice.start_state && currentDevice.start_state[key]) {
                 currentDevice.start_state[key].state = newState;
